--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 /* REGOLE GENERALI */
 .container{
-    max-width: 900px;
+    max-width: 1200px;
     margin: 0 auto;
     min-height: 60px;
 }
@@ -22,13 +22,18 @@ header{
     display: flex;
 }
 
-header > .top-part{
+header > .header-top{
     min-height: initial;
 }
 
-.header-line{
-    flex-grow: 1;
-    padding: 10px;
+.header-top > div{
+    width: 25%;
+    padding: 5px;
+}
+
+.header-top > nav{
+    width: 50%;
+    padding: 5px;
 }
 
 ul{
@@ -41,22 +46,22 @@ li{
     margin-right: 5px;
 }
 
-.login{
+.header-top:last-child{
     text-align: end;
 }
 
 /* SEZIONE TITOLO */
-.bottom-part{
+.header-bottom{
     padding: 30px 0;
     margin-top: 15px;
 }
 
-.bottom-part.container-flex{
+.header-bottom.container-flex{
     justify-content: center;
 }
 
-#title{
-    width: 700px;
+.title{
+    width: 70%;
 }
 
 /* SEZIONE CENTRALE */
@@ -78,7 +83,7 @@ li{
 }
 
 /* SEZIONE COLUMN */
-#green-square{
+.green-square{
     width: 100%;
 }
 
@@ -118,7 +123,7 @@ hr{
     background-color: #add8e6;
 }
 
-.debug header > .top-part{
+.debug .header-top{
     background-color: #daa520;
 }
 
@@ -126,11 +131,11 @@ hr{
     border: 2px dashed black;
 }
 
-.debug .bottom-part{
+.debug .header-bottom{
     background-color: #00008b;
 }
 
-.debug #title{
+.debug .title{
     background-color: #ee82ee;
     border: 2px dashed black;
     height: 300px;
@@ -148,7 +153,7 @@ hr{
     height: 400px;
 }
 
-.debug #green-square{
+.debug .green-square{
     background-color: #228b22;
     border: 2px dashed black;
     height: 600px;
