--- a/css/style.css
+++ b/css/style.css
@@ -6,24 +6,40 @@
 }
 
 /* REGOLE GENERALI */
+*{
+    font-family: 'Whitney', sans-serif;
+    font-family: 'Whitney Semibold', sans-serif;
+    font-family: 'Whitney Book', sans-serif;
+    font-family: 'Whitney Light', sans-serif;
+
+    font-weight: bold;
+}
+
 .container{
     max-width: 1200px;
     margin: 0 auto;
     min-height: 60px;
 }
 
-/* HEADER */
-/* SEZIONE LOGO E LINKS */
-header{
-    padding-top: 15px;
-}
-
 .container-flex{
     display: flex;
 }
 
-header > .header-top{
+button{
+    padding: 5px;
+    border-radius: 25%;
+}
+
+/* HEADER */
+/* SEZIONE LOGO E LINKS */
+header{
+    padding-top: 15px;
+    background-color: #3161e0;
+}
+
+.header-top{
     min-height: initial;
+    align-items: center;
 }
 
 .header-top > div{
@@ -36,24 +52,36 @@ header > .header-top{
     padding: 5px;
 }
 
+.header-line.container-flex{
+    justify-content: end;
+}
+
 ul{
     list-style: none;
     justify-content: center;
 }
 
 li{
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
-.header-top:last-child{
-    text-align: end;
+header a{
+    color: white;
+    text-decoration: none;
+}
+
+.header-line > button{
+    border-color: white;
+    border-style: none;
 }
 
 /* SEZIONE TITOLO */
 .header-bottom{
     padding: 30px 0;
     margin-top: 15px;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
 }
 
 .header-bottom.container-flex{
@@ -62,6 +90,7 @@ li{
 
 .title{
     width: 70%;
+    text-align: center;
 }
 
 /* SEZIONE CENTRALE */
