--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,7 @@ header a{
 
 /* SEZIONE TITOLO */
 .header-bottom{
-    padding: 30px 0;
-    margin-top: 15px;
+    padding: 50px 0 120px;
     background-image: url(../img/jumbo.png);
     background-size: cover;
 }
@@ -89,8 +88,29 @@ header a{
 }
 
 .title{
-    width: 70%;
+    width: 45%;
     text-align: center;
+    color: white;
+}
+
+h1{
+    font-size: 3em;
+    margin: 40px 0;
+}
+
+header .buttons{
+    margin: 20px 0;
+}
+
+.title button{
+    border-radius: 20px;
+    margin: 0 20px;
+    padding: 10px 15px;
+}
+
+.title button:last-child{
+    background-color: #23272a;
+    color: white;
 }
 
 /* SEZIONE CENTRALE */
