--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -248,6 +248,7 @@ i + i{
  .social ul li ul {
     position: absolute;
     display: none;
+    width: 10%;
   }
 
 .social ul li ul li { 
@@ -261,7 +262,7 @@ i + i{
     color: white;
     font-size: 0.7em;
     margin-top: 5px;
-    padding-left: 10px;
+    padding-left: 18px;
 }
 
 
